--- a/style.css
+++ b/style.css
@@ -60,11 +60,13 @@ ul#initial-focus h3 {
   font-style: italic;
 }
 
-ul#initial-focus a {
+ul#initial-focus a,
+ul#recent-posts a {
   color: #646461;
 }
 
-ul#initial-focus a:hover {
+ul#initial-focus a:hover,
+ul#recent-posts a:hover {
   color: #242420;
 }
 
