--- a/style.css
+++ b/style.css
@@ -122,6 +122,64 @@ ul#recent-posts {
   clear: both;
 }
 
+#primary-content {
+  width: 500px;
+  float: left;
+}
+
+#blog-sidebar {
+  width: 250px;
+  float: right;
+  padding: 15px;
+  background-color: #fafaf7;
+  font-size: 0.9em;
+}
+
+#blog-sidebar h3 {
+  font-weight: 500;
+}
+
+.subpage {
+  margin-top: 50px;
+}
+
+h2.recent {
+  font-size: 20px;
+  color: #646462;
+  margin-bottom: 30px;
+}
+
+.post {
+  border-bottom: 1px solid #efefec;
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+.post-title {
+  font-size: 30px;
+}
+
+.post-date {
+  text-transform: uppercase;
+  font-size: 11px;
+}
+
+.post-body {
+
+}
+
+.post-excerpt {
+
+}
+
+footer {
+  margin-top: 50px;
+  padding: 30px 0px;
+  border-top: 1px solid #efefef;
+  font-size: 0.9em;
+  text-align: center;
+}
+
 /* tablet size */
 @media only screen and (min-width: 600px) {
   .container {
