--- a/style.css
+++ b/style.css
@@ -69,8 +69,7 @@ div#main-message {
   color: #646461;
 }
 
-ul#initial-focus,
-ul#recent-posts {
+ul#initial-focus {
   margin: 0px;
   padding: 0px;
   text-align: center;
@@ -83,8 +82,7 @@ h3.focus {
   padding-bottom: 5px;
 }
 
-ul#initial-focus a,
-ul#recent-posts a {
+ul#initial-focus a {
   color: #646461;
   background-color: #fafaf3;
   padding: 20px 25px 20px 25px;
@@ -95,14 +93,12 @@ ul#recent-posts a {
   border-radius: 5px;
 }
 
-ul#initial-focus a:hover,
-ul#recent-posts a:hover {
+ul#initial-focus a:hover {
   color: #242420;
   background-color: #eaeae6;
 }
 
-ul#initial-focus li,
-ul#recent-posts li {
+ul#initial-focus li {
   list-style-type: none;
   display: block;
   font-size: 20px;
@@ -129,7 +125,6 @@ h3#recent {
   font-size: 30px;
   font-weight: 300;
   color: #646462;
-  text-align: center;
 }
 
 .team-member {
@@ -143,9 +138,8 @@ h3#recent {
   height: auto;
 }
 
-ul#recent-posts {
+#recent-posts {
   margin-top: 80px;
-  padding-top: 80px;
   clear: both;
 }
 
@@ -186,6 +180,11 @@ h2.recent {
   font-size: 30px;
 }
 
+h3.post-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .post-date {
   text-transform: uppercase;
   font-size: 11px;
@@ -210,6 +209,26 @@ footer {
   padding: 30px 0px;
   border-top: 1px solid #efefef;
   font-size: 0.9em;
+  text-align: center;
+}
+
+#front-column-left {
+  width: 40%;
+  float: left;
+  margin-bottom: 50px;
+}
+
+#front-column-right {
+  width: 50%;
+  float: right;
+  margin-bottom: 50px;
+}
+
+#who-we-are {
+  clear: both;
+}
+
+#who-we-are h3 {
   text-align: center;
 }
 
